New APIs for profile

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -15,5 +15,6 @@ log4j.logger.fr.ippon.tatami=DEBUG
 log4j.logger.org.springframework=WARN
 log4j.logger.org.springframework.security=WARN
 log4j.logger.me.prettyprint.cassandra=WARN
+log4j.logger.me.prettyprint.hom=WARN
 log4j.logger.org.openid4java=WARN
 log4j.logger.org.apache=WARN
