Integrated front-end with back-end

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -13,7 +13,7 @@ log4j.appender.CONSOLE.layout.ConversionPattern=[%p] %c - %m%n
 log4j.logger.fr.ippon.tatami=DEBUG
 
 log4j.logger.org.springframework=WARN
-log4j.logger.org.springframework.security=DEBUG
+log4j.logger.org.springframework.security=WARN
 log4j.logger.me.prettyprint.cassandra=WARN
 log4j.logger.me.prettyprint.hom=WARN
 log4j.logger.org.apache=WARN
