--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,6 +10,7 @@ log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=[%p] %c - %m%n
 
 # Change the level of messages for various packages.
+log4j.logger.monitoring=DEBUG
 log4j.logger.fr.ippon.tatami=DEBUG
 
 log4j.logger.org.springframework=WARN
