--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>${project.description}</finalName>
+        <finalName>tatami</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
