Recoded profile page

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -14,6 +14,7 @@ log4j.logger.monitoring=DEBUG
 log4j.logger.fr.ippon.tatami=DEBUG
 
 log4j.logger.org.springframework=WARN
+log4j.logger.org.springframework.web=WARN
 log4j.logger.org.springframework.security=WARN
 log4j.logger.me.prettyprint.cassandra=WARN
 log4j.logger.me.prettyprint.hom=WARN
