--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -16,6 +16,8 @@ log4j.logger.fr.ippon.tatami=DEBUG
 log4j.logger.org.springframework=WARN
 log4j.logger.org.springframework.web=WARN
 log4j.logger.org.springframework.security=WARN
+log4j.logger.org.springframework.cache=DEBUG
+log4j.logger.net.sf.ehcache=DEBUG
 log4j.logger.me.prettyprint.cassandra=WARN
 log4j.logger.me.prettyprint.hom=WARN
 log4j.logger.org.apache=WARN
