--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,15 @@
 		<spring.security.version>3.1.0.RELEASE</spring.security.version>
 		<aspectj.version>1.6.11</aspectj.version>
 		<slf4j.version>1.6.4</slf4j.version>
+		<lombok.version>0.10.8</lombok.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpcore</artifactId>
@@ -152,6 +159,12 @@
 			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.easytesting</groupId>
+			<artifactId>fest-assert</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>tatami</finalName>
@@ -215,4 +228,34 @@
 			</plugin>
 		</plugins>
 	</build>
+	<profiles>
+		<profile>
+			<id>install-lombok</id>
+			<build>
+				<defaultGoal>initialize</defaultGoal>
+				<plugins>
+					<plugin>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<version>1.7</version>
+						<executions>
+							<execution>
+								<phase>initialize</phase>
+								<configuration>
+									<target>
+										<exec executable="java">
+											<arg value="-jar" />
+											<arg value="${settings.localRepository}/org/projectlombok/lombok/${lombok.version}/lombok-${lombok.version}.jar" />
+										</exec>
+									</target>
+								</configuration>
+								<goals>
+									<goal>run</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
