jetty:run is now the default maven goal

--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,7 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<defaultGoal>jetty:run</defaultGoal>
 		<finalName>tatami</finalName>
 		<plugins>
 			<plugin>
