--- a/pom.xml
+++ b/pom.xml
@@ -241,4 +241,43 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <!-- Profiles which deactivate classpath scanning to speed up web container at start time : -->
+        <profile>
+            <!-- mvn jetty:run -PjettyWoCpScan -->
+            <id>jettyWoCpScan</id>
+            <build>
+                <plugins>
+        	       <plugin>
+                        <groupId>org.mortbay.jetty</groupId>
+                        <artifactId>jetty-maven-plugin</artifactId>
+                        <version>8.0.4.v20111024</version>
+                        <configuration>
+                            <webApp>
+                                <descriptor>src/main/webxmlAlternatives/web.xml</descriptor>
+                            </webApp>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <!-- mvn jetty:run-war -PwarWoCpScan -->
+            <id>warWoCpScan</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-war-plugin</artifactId>
+                        <configuration>
+                            <failOnMissingWebXml>true</failOnMissingWebXml>
+                            <webXml>src/main/webxmlAlternatives/web.xml</webXml>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+    
 </project>
