--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>3.1.1.RELEASE</spring.version>
         <spring.security.version>3.1.0.RELEASE</spring.security.version>
+        <spring.social.version>1.0.1.RELEASE</spring.social.version>
         <aspectj.version>1.6.11</aspectj.version>
         <slf4j.version>1.6.4</slf4j.version>
     </properties>
@@ -143,6 +144,22 @@
             <artifactId>spring-security-taglibs</artifactId>
             <version>${spring.security.version}</version>
         </dependency>
+        <dependency>
+		   <groupId>org.springframework.social</groupId>
+		   <artifactId>spring-social-core</artifactId>
+		   <version>${spring-social.version}</version>
+		</dependency>
+		<dependency>
+		   <groupId>org.springframework.social</groupId>
+		   <artifactId>spring-social-web</artifactId>
+		   <version>${spring-social.version}</version>
+		</dependency>
+		<dependency>
+		   <groupId>org.springframework.social</groupId>
+		   <artifactId>spring-social-github</artifactId>
+		   <version>${spring-social.version}</version>
+		</dependency>
+		
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
