start mobile support

--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.mobile</groupId>
+            <artifactId>spring-mobile-device</artifactId>
+            <version>1.0.0.RC1</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>tatami</finalName>
@@ -236,5 +241,13 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>org.springframework.maven.milestone</id>
+            <name>Spring Maven Milestone Repository</name>
+            <url>http://maven.springframework.org/milestone</url>
+        </repository>
+    </repositories>
     
 </project>
