--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -21,3 +21,5 @@ log4j.logger.net.sf.ehcache=WARN
 log4j.logger.me.prettyprint.cassandra=WARN
 log4j.logger.me.prettyprint.hom=WARN
 log4j.logger.org.apache=WARN
+
+log4j.logger.org.elasticsearch=WARN
