Refactored Elastic Search and i18n configuration (to use Java Config instead of XML), prepared work to move to an embedded instance of Elastic Search.

--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -1,4 +1,9 @@
+#Cassandra configuration
 cassandra.host=127.0.0.1:9160
 cassandra.clusterName=Tatami cluster
 cassandra.keyspace=tatami
-hashtag.default=ippon
+
+#Elastic Search configuration
+elasticsearch.activated=false
+elasticsearch.host=localhost
+elasticsearch.port=9300
