--- a/src/test/resources/tatami/tatami-test.properties
+++ b/src/test/resources/tatami/tatami-test.properties
@@ -1,4 +1,9 @@
+#Cassandra configuration
 cassandra.host=localhost:9171
 cassandra.clusterName=Tatami cluster
 cassandra.keyspace=tatami
-hashtag.default=ippon
+
+#Elastic Search configuration
+elasticsearch.activated=false
+elasticsearch.host=localhost
+elasticsearch.port=9300
