Refactored UI pages, and corrected lots of small bugs

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Set root logger level to DEBUG and its only appender to CONSOLE.
-log4j.rootLogger=TRACE, CONSOLE
+log4j.rootLogger=DEBUG, CONSOLE
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
@@ -13,13 +13,13 @@ log4j.appender.CONSOLE.layout.ConversionPattern=[%p] %c - %m%n
 log4j.logger.monitoring=DEBUG
 log4j.logger.fr.ippon.tatami=DEBUG
 
+log4j.logger.me.prettyprint.cassandra=WARN
+log4j.logger.me.prettyprint.hom=WARN
+log4j.logger.net.sf.ehcache=WARN
+log4j.logger.org.apache=WARN
+log4j.logger.org.elasticsearch=WARN
+log4j.logger.org.hibernate.validator=WARN
 log4j.logger.org.springframework=WARN
 log4j.logger.org.springframework.web=WARN
 log4j.logger.org.springframework.security=WARN
 log4j.logger.org.springframework.cache=WARN
-log4j.logger.net.sf.ehcache=WARN
-log4j.logger.me.prettyprint.cassandra=WARN
-log4j.logger.me.prettyprint.hom=WARN
-log4j.logger.org.apache=WARN
-
-log4j.logger.org.elasticsearch=WARN
