--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -4,6 +4,8 @@ cassandra.clusterName=Tatami cluster
 cassandra.keyspace=tatami
 
 #Elastic Search configuration
+elasticsearch.clusterName=tatamiCluster
+elasticsearch.indexName=tatami
 elasticsearch.activated=false
 elasticsearch.host=localhost
 elasticsearch.port=9300
