--- a/src/test/resources/tatami/tatami-test.properties
+++ b/src/test/resources/tatami/tatami-test.properties
@@ -4,6 +4,8 @@ cassandra.clusterName=Tatami cluster
 cassandra.keyspace=tatami
 
 #Elastic Search configuration
-elasticsearch.activated=false
+elasticsearch.clusterName=tatamiCluster
+elasticsearch.indexName=tatami
+elasticsearch.activated=true
 elasticsearch.host=localhost
 elasticsearch.port=9300
