Refactored & reformatted Elastic Search code

--- a/src/main/resources/META-INF/elasticsearch/_settings.properties
+++ b/src/main/resources/META-INF/elasticsearch/_settings.properties
@@ -2,7 +2,7 @@ index.refresh_interval=-1
 gateway.type=org.elasticsearch.gateway.local.LocalGatewayModule
 cluster.name=tatamiCluster
 index.number_of_replica=0
-# path.home=/opt/es/
+path.home=target/elasticsearch
 index.number_of_shards=1
 index.analysis.analyzer.default.type=snowball
 index.analysis.analyzer.default.language=French
