Elastic Search : many improvments. Unit tests are now running without issue. Some CSS fixes A proposition regarding the static resource versioning, using Spring MVC ResourceHandler.

--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -1,3 +1,5 @@
+tatami.version=1.0-SNAPSHOT
+
 #Cassandra configuration
 cassandra.host=127.0.0.1:9160
 cassandra.clusterName=Tatami cluster
@@ -5,7 +7,4 @@ cassandra.keyspace=tatami
 
 #Elastic Search configuration
 elasticsearch.activated=false
-elasticsearch.clusterName=tatamiCluster
 elasticsearch.indexName=tatami
-elasticsearch.host=localhost
-elasticsearch.port=9300
