--- a/src/test/resources/tatami/tatami-test.properties
+++ b/src/test/resources/tatami/tatami-test.properties
@@ -1,11 +1,8 @@
 #Cassandra configuration
 cassandra.host=localhost:9171
-cassandra.clusterName=Tatami cluster
+cassandra.cluster=Tatami cluster
 cassandra.keyspace=tatami
 
 #Elastic Search configuration
 elasticsearch.activated=false
-elasticsearch.clusterName=tatamiCluster
 elasticsearch.indexName=tatami
-elasticsearch.host=localhost
-elasticsearch.port=9300
