--- a/pom.xml
+++ b/pom.xml
@@ -277,7 +277,7 @@
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>8.0.4.v20111024</version>
                 <configuration>
-                    <scanIntervalSeconds>3</scanIntervalSeconds>
+                    <!-- <scanIntervalSeconds>3</scanIntervalSeconds> -->
                     <stopKey>stop-jetty</stopKey>
                     <stopPort>9999</stopPort>
                 </configuration>
