--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -8,3 +8,4 @@ cassandra.keyspace=tatami
 #Elastic Search configuration
 elasticsearch.activated=false
 elasticsearch.indexName=tatami
+elasticsearch.path.conf=
