Gestion des URLs raccourcies

--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -1,4 +1,20 @@
+# tatami.version can (should) be used to version static resources and thus enable a long cache value.
 tatami.version=1.0-SNAPSHOT
+
+# tatami.short.url.prefix is the prefix used for short URL.
+# In a perfect world, a short domain name should be used, like to one proposed here.
+# This is totally possible in an enterprise network (just a DNS definition)
+#
+# The value 127.0.0.1 can only be used locally. Please change this for any
+# production deployment with a real IP or domain name
+# If set to nothing, the URL shortener functionnality is disabled
+#
+# Examples of possible values:
+# tatami.short.url.prefix=http://tt.mi/s/
+# tatami.short.url.prefix=http://127.0.0.1:8080/s/
+# tatami.short.url.prefix=/s/
+# tatami.short.url.prefix=
+tatami.short.url.prefix=rel:///s/
 
 #Cassandra configuration
 cassandra.host=127.0.0.1:9160
