--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -20,5 +20,5 @@ log4j.logger.org.elasticsearch=WARN
 log4j.logger.org.hibernate.validator=WARN
 log4j.logger.org.springframework=WARN
 log4j.logger.org.springframework.web=WARN
-log4j.logger.org.springframework.security=WARN
+log4j.logger.org.springframework.security=DEBUG
 log4j.logger.org.springframework.cache=WARN
