--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,8 +10,8 @@ log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=[%p] %c - %m%n
 
 # Change the level of messages for various packages.
-log4j.logger.monitoring=INFO
-log4j.logger.fr.ippon.tatami=DEBUG
+log4j.logger.monitoring=WARN
+log4j.logger.fr.ippon.tatami=WARN
 
 log4j.logger.me.prettyprint=WARN
 log4j.logger.net.sf.ehcache=WARN
@@ -20,5 +20,5 @@ log4j.logger.org.elasticsearch=WARN
 log4j.logger.org.hibernate.validator=WARN
 log4j.logger.org.springframework=WARN
 log4j.logger.org.springframework.web=WARN
-log4j.logger.org.springframework.security=DEBUG
+log4j.logger.org.springframework.security=WARN
 log4j.logger.org.springframework.cache=WARN
